Added skyboxes, first- and third-person controllers (the last two don't exactly work yet). * Also: Optimization * Now utilizing preferences more

--- a/data/polygame.properties
+++ b/data/polygame.properties
@@ -1,2 +1,9 @@
 #Display
-skyColor = 255, 0, 0
+window.backgroundColor = #6495ed
+
+#Rendering
+renderEngine.ambientLightStrength = .2
+renderEngine.viewDistance = 1000
+renderEngine.fieldOfView = 70
+renderEngine.faceCulling = true
+renderEngine.depthTesting = true
