--- a/data/polygame.properties
+++ b/data/polygame.properties
@@ -6,3 +6,10 @@ renderEngine.ambientLightStrength = .2
 renderEngine.viewDistance = 1000
 renderEngine.fieldOfView = 70
 renderEngine.faceCulling = true
+
+#Terrain
+terrain.width = 128
+terrain.height = 128
+terrain.resolution = 1
+terrain.maxHeight = 40
+terrain.maxValue = 16777216
