New Gui Library (WIP)

--- a/data/polygame.properties
+++ b/data/polygame.properties
@@ -7,6 +7,9 @@ renderEngine.viewDistance = 1000
 renderEngine.fieldOfView = 70
 renderEngine.faceCulling = true
 
+#Gui
+guiEngine.defaultPadding = 3px, 3px, 3px, 3px
+
 #Terrain
 terrain.width = 128
 terrain.height = 128
